exercice mini-lexique

--- a/html/lexique.html
+++ b/html/lexique.html
@@ -5,8 +5,14 @@
     <title>lexique API</title>
 </head>
 <body>
+    <div id="lettres">
+
+    </div>
+    <div id="mots">
+
+    </div>
 
     <script src="../js/ajax.js"></script>
-    <script type="../js/lexique.js"></script>
+    <script src="../js/lexique.js"></script>
 </body>
 </html>
